[metadata]
name = aladin
version = 0.1.0
author = Petr Mánek
author_email = petrmanek@users.noreply.github.com
description = Command-line frontend (and Python client) for the Aladin weather forecast system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petrmanek/aladin
project_urls =
    Bug Tracker = https://github.com/petrmanek/aladin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = aladin
install_requires =
    requests
    argparse
    ffmpeg-python
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    aladin = aladin:run_aladin_cli

